src/z80asm/z80asm2/t/05-cli/expected/at_files_04.txt
% z88dk-z80asm -v -dump-after-cmdline @t/05-cli//input/at_files_04.lst
t/05-cli/input/at_files_04_list3.lst:4:5: error: Recursive inclusion of list file: at_files_04_list1.lst
    	@ 	at_files_04_list1.lst
    	  	^
verbose	1
ucase_labels	0
preprocess_only	0
swap_ix_iy	0
date_stamp	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_preprocessing	0
m4_options	
perl_options	
cpp_options	
output_dir	
